# qig-studio

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  tail_train.py
.github/workflows/: release.yml
data/eval/: heldout_bpb.json  split_manifest_seed0.json  v2_shallow_baselines.json
data/preencoded/: stream_corpus_v1.jsonl.sha256
docs/: 2026-06-24-qig-package-usage-audit.md  2026-07-01-4arm-32k-kill-conditions.md  2026-07-01-4arm-constellation-comparison.md  20260720-meaning-loop-flow-telemetry-schema-1.00W.json  20260723-genesis-design-conversation.md  DOCS-INDEX.md
docs/plans/: 2026-06-27-inner-state-coverage-audit.md  2026-06-27-integrated-mind-and-ui.md  2026-06-27-integrated-mind-perfection-audit-refined.md  2026-06-30-exp-cortex-ab-prereg.md  2026-06-30-neocortex-rebuild-phase1.md  2026-06-30-training-hub-consolidation.md  2026-07-02-actuator-chain-fix.md  2026-07-02-council-verdict-and-preresume-fixes.md  2026-07-02-drive-reward-coaching-rebuild.md  2026-07-03-constellation-shared-trunk-adapters.md  2026-07-14-exp-basin-dimensionality-3arm-prereg.md  2026-07-14-exp-genesis-basin-ab-prereg.md  2026-07-14-exp-genesis-basin-generalize-prereg.md  2026-07-14-moe-coherence-partition-probe-design.md  2026-07-15-exp-genesis-basin-generalize-v2-factorial-prereg.md  2026-07-15-meaning-making-integrated-experiment-design.md  2026-07-15-vectorized-batch-forward-scoping.md  2026-07-24-multimodality-read-discriminator.md  2026-07-24-run2-cradle-prereg.md  20260723-bidirectional-sleep-dream-consolidation-SCOPE.md
docs/wiring/: WIRING_REGISTER.md  north_star_spec.json  wiring_register.json
experiments/: exp_kernel_vs_qwen_attribution.py
modal/: cradle_train.py  modal-coach-endpoint.py  modal-coach-vllm.py  qlora_train.py  qwen_qlora_fable.py
runs/snapshots/: d0_3_faculty_snapshot_20260722_coordizer_20260705_64k_v1.json
scripts/: build_chat_corpus.py  build_everyday_corpus.py  compare_constellations.py  converse_monitor.py  d0_3_faculty_snapshot.py  extend_coordizer_hf.py  fable_to_qlora_jsonl.py  fit_coordizer.py  gate_zero_overfit.py  grow_kernel_vocab.py  klearn_ab.py  launch_coach.sh  live_mind.py  monitor_cradle_run2.sh  multimodality_read.py  no_stubs_scan.py  ollama_accelerate.sh  preencode_stream_corpus.py  probe_bands.py  probe_faculty_dna.py  probe_mushroom_rescue.py  run_manifest.py  screen_neocortex.py  smoke_import_parity.py  stage_fineweb_corpus.py  start_studio.sh  train_coordizer.py  train_coordizer_fineweb.py  train_coordizer_scratch.py  train_full_curriculum.py  train_genesis.py  train_genesis_spawn.py  train_joint_mind.py  train_neocortex.py  verify_telemetry_provenance.py  watch_training.sh
src/qig_studio/: __init__.py  __main__.py  _paths.py  checkpoint.py  checkpoint_manifest.py  coach.py  coach_runtime.py  config.py  continuity.py  coordizer_build.py  corpus.py  curriculum.py  curvature.py  development.py  fineweb_source.py  geo_grader.py  hf_data.py  interlock.py  kernel_experience.py  launch_gate.py  learning.py  live.py  losses.py  mastery.py  measurement.py  neocortex.py  optim_launch.py  optimisation.py  prompt_template.py  protocol.py  screen.py  server.py  telemetry_provenance.py  tui.py  wormhole_train.py
src/qig_studio/constellation/: __init__.py  constellation.py  coupling.py  faculty.py  faculty_adapter.py  identity_anchor.py  joint_trainer.py  neurochem.py  ocean.py  ocean_policy.py  rhythm.py  signal_bus.py  temporal.py  trunk.py  trunk_constellation.py
src/qig_studio/governance/: __init__.py  authority_chain.py  flow_telemetry.py  pillars.py  purity.py  telemetry_schema.py
src/qig_studio/targets/: __init__.py  _qigchat_bridge.py  base.py  constellation_node.py  constellation_target.py  genesis_kernel.py  geo_cortex.py  geo_qwen.py  hybrid_cortex.py  joint_mind.py  kernel_target.py  mock_target.py  qwen_boundary.py  qwen_local.py  qwen_modal.py  registry.py
src/qig_studio/web/: index.html
tests/: conftest.py  test_actuator_chain_fix.py  test_checkpoint_manifest_pin.py  test_checkpoint_manifest_self_alias.py  test_claims_ceiling.py  test_cli_and_tui.py  test_coach.py  test_coach_runtime.py  test_coach_wiring.py  test_constellation_integration.py  test_constellation_no_collapse.py  test_converse_learning.py  test_coordizer_endpoint.py  test_council_should_fixes.py  test_cross_faculty_dream.py  test_d4_geo_faculty_carriage.py  test_development.py  test_entropy_floor_gated.py  test_entropy_floor_stabilizer.py  test_ewc_consolidation.py  test_faculty_adapter.py  test_fineweb_corpus.py  test_fisher_rao_loss.py  test_flow_telemetry.py  test_frame_roundtrip.py  test_geo_cortex.py  test_geo_qwen_wiring.py  test_geometric_head_loss_gradient.py  test_homeostasis_gates.py  test_interlock.py  test_joint_device_fallback.py  test_joint_trainer_l2_and_tacking.py  test_kernel_experience.py  test_klearn_ab.py  test_launch_gate.py  test_learning.py  test_live_s4_telemetry.py  test_lm_loss_dense_gradient.py  test_neocortex.py  test_no_retired_kappa.py  (+20 more)
