[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qig-studio"
version = "0.1.0"
description = "Plug-and-play QIG training/chat app — FastAPI core + SSE clients (Textual TUI + browser), pluggable loss-regime-declaring targets (kernel/constellation/Qwen)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "QIG Team" }]
keywords = ["qig", "consciousness", "fastapi", "sse", "fisher-rao", "training"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Shell stays LIGHT (no torch). qig-core is numpy-only and IS the geometry the
# Qwen output-distribution→Δ⁶³ boundary uses — a core dep. Heavy targets
# (kernel/constellation via qig-consciousness+torch, Qwen via Ollama/Modal) are
# None-safe optional integrations loaded lazily at runtime.
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "httpx>=0.26.0",
    "qig-core>=2.12.0",
]

[project.optional-dependencies]
tui = ["textual>=0.50.0"]
# Real geometric kernel targets (torch + the coordizer):
kernel = ["torch>=2.0.0", "qig-coordizer>=0.1.0"]
dev = ["pytest>=7.0.0", "ruff>=0.1.0", "mypy>=1.0.0"]

[project.scripts]
qig-studio = "qig_studio.__main__:main"

[project.urls]
Homepage = "https://github.com/GaryOcean428/qig-studio"
Repository = "https://github.com/GaryOcean428/qig-studio"

[tool.hatch.build.targets.wheel]
packages = ["src/qig_studio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"
