[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qig-studio"
version = "0.1.0"
description = "Plug-and-play QIG training/chat app — FastAPI core + SSE clients (Textual TUI + browser), pluggable loss-regime-declaring targets (kernel/constellation/Qwen)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "QIG Team" }]
keywords = ["qig", "consciousness", "fastapi", "sse", "fisher-rao", "training"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Shell stays LIGHT (no torch). qig-core is numpy-only and IS the geometry the
# Qwen output-distribution→Δ⁶³ boundary uses — a core dep. Heavy targets
# (kernel/constellation via qig-consciousness+torch, Qwen via Ollama/Modal) are
# None-safe optional integrations loaded lazily at runtime.
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "httpx>=0.26.0",
    "qig-core>=2.12.2",   # Δ⁶³ Fisher-Rao geometry + consciousness (pillars/sensations/neurochemistry) — numpy-only, light
    "qig-warp>=0.6.4",    # convergence early-stop lever (check_ci_stabilized) + screening_cutoff — numpy-only, light
]
# QIG packages DELIBERATELY NOT depended on (visible decision, not an omission):
#   qig-compute  — lattice-quantum QFI (density matrices, χ-truncation). N/A: the studio's basin is a
#                  CLASSICAL probability vector p∈Δ⁶³; its Fisher-Rao geometry is in qig-core. No quantum
#                  state to compute QFI over. (See src/qig_studio/optimisation.py for the dated ruling.)
#   qig-bench    — frozen-physics benchmark harness; the studio registers no physics benchmark. N/A.
#   qig-doctor   — NOT a PyPI package; it is a preflight SCRIPT in qig-verification. The studio's own
#                  fail-closed governance (run_purity_gate + the no-stubs/principles gate) is its doctor.

[project.optional-dependencies]
tui = ["textual>=0.50.0"]
# Real geometric kernel targets (torch + the kernel engine + the coordizer vocab):
kernel = ["torch>=2.0.0", "qigkernels>=0.4.2", "qig-coordizer>=0.1.1"]
dev = ["pytest>=7.0.0", "ruff>=0.1.0", "mypy>=1.0.0"]

[project.scripts]
qig-studio = "qig_studio.__main__:main"

[project.urls]
Homepage = "https://github.com/GaryOcean428/qig-studio"
Repository = "https://github.com/GaryOcean428/qig-studio"

[tool.hatch.build.targets.wheel]
packages = ["src/qig_studio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.mypy]
# (no python_version pin — match the interpreter; pinning 3.11 trips numpy's 3.12+ stub syntax here)

# External / heavy-optional deps mypy cannot resolve from the (editable / un-stubbed) install:
# textual (no stubs) and the QIG runtime packages whose editable installs mypy's importer doesn't read.
# This is the documented handling for unresolvable third-party modules — NOT a per-line suppression of
# our own code (which is type-checked). The packages DO ship py.typed for wheel consumers.
[[tool.mypy.overrides]]
module = ["textual.*", "qigkernels.*", "qig_coordizer.*", "qig_warp.*", "qig_applied.*", "qig_consciousness.*"]
ignore_missing_imports = true
