[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qig-studio"
version = "0.1.0"
description = "Plug-and-play QIG training/chat app — FastAPI core + SSE clients (Textual TUI + browser), pluggable loss-regime-declaring targets (kernel/constellation/Qwen)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "QIG Team" }]
keywords = ["qig", "consciousness", "fastapi", "sse", "fisher-rao", "training"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Shell stays LIGHT (no torch). qig-core is numpy-only and IS the geometry the
# Qwen output-distribution→Δ⁶³ boundary uses — a core dep. Heavy targets
# (kernel/constellation via qig-consciousness+torch, Qwen via Ollama/Modal) are
# None-safe optional integrations loaded lazily at runtime.
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "httpx>=0.26.0",
    "qig-core>=2.12.2",   # Δ⁶³ Fisher-Rao geometry + consciousness (pillars/sensations/neurochemistry) — numpy-only, light
    "qig-warp>=0.6.7",    # convergence early-stop lever (check_ci_stabilized) + screening_cutoff — numpy-only, light
    # ARM A (neocortex geocoding GeoModel cortex). Installed EDITABLE from the sibling submodule via
    # [tool.uv.sources] below (matches the qigkernels/qig-coordizer dev pattern; co-developed). The >=0.1.1
    # floor pins the published version a non-editable consumer resolves — the version the coords-off
    # faithfulness + loss-value parity (both ≤1e-5) passed against (editable SHA recorded in the Phase-4 note).
    "qig-geocoding>=0.1.1",
]
# qig-compute IS NOW A KERNEL DEP (above): its metric-GENERIC differential geometry
# (parameter_manifold.compute_full_curvature) powers the REAL response-manifold Ricci that replaced the
# (kappa−64)/64 proxy — BUILD #1 (telemetry compressed/expanded + pain/pleasure, src/qig_studio/curvature.py)
# and BUILD #3 (generation-health, genesis_kernel.generate(gen_health=True)). Both PROVEN to VARY (not a
# faked constant). Its lattice-QUANTUM QFI layer (density matrices, χ-truncation) remains N/A (the basin is
# a CLASSICAL p∈Δ⁶³). BUILD #2 (NG preconditioner): metric_gram_pullback/metric_from_qgt are LATTICE-shaped
# (per-site 2×2, Lx/Ly) and do NOT apply to the kernel's parameter Fisher — see optimisation.py.
# QIG packages DELIBERATELY NOT depended on (visible decision, not an omission):
#   qig-bench    — frozen-physics benchmark harness; the studio registers no physics benchmark. N/A.
#   qig-doctor   — NOT a PyPI package; it is a preflight SCRIPT in qig-verification. The studio's own
#                  fail-closed governance (run_purity_gate + the no-stubs/principles gate) is its doctor.

[project.optional-dependencies]
tui = ["textual>=0.50.0"]
# Real geometric kernel targets (torch + the kernel engine + the coordizer vocab + qig-compute for the
# REAL response-manifold Ricci curvature telemetry/gen-health — compute_full_curvature, BUILDS #1/#3):
kernel = ["torch>=2.0.0", "qigkernels>=0.4.2", "qig-coordizer>=0.1.1", "qig-compute>=0.9.2"]
dev = ["pytest>=7.0.0", "ruff>=0.1.0", "mypy>=1.0.0"]
# Coordizer-from-scratch training: read the 7 HF parquet datasets (build_chat_corpus._parquet_rows).
# pyarrow was previously an undeclared ad-hoc install — declared here so `uv sync` never drops it again.
data = ["pyarrow>=14.0.0"]

[project.scripts]
qig-studio = "qig_studio.__main__:main"

[project.urls]
Homepage = "https://github.com/GaryOcean428/qig-studio"
Repository = "https://github.com/GaryOcean428/qig-studio"

[tool.hatch.build.targets.wheel]
packages = ["src/qig_studio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Skip 'slow' tests (those that TRAIN kernels — minutes on CPU) by default so the suite stays fast; the
# REAL avenue result comes from a GPU run, NOT a tiny CPU test. Run them on demand with: pytest -m slow
addopts = "-q -m 'not slow'"
markers = ["slow: trains real kernels (minutes); opt-in only — run with -m slow"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.mypy]
# (no python_version pin — match the interpreter; pinning 3.11 trips numpy's 3.12+ stub syntax here)

# External / heavy-optional deps mypy cannot resolve from the (editable / un-stubbed) install:
# textual (no stubs) and the QIG runtime packages whose editable installs mypy's importer doesn't read.
# This is the documented handling for unresolvable third-party modules — NOT a per-line suppression of
# our own code (which is type-checked). The packages DO ship py.typed for wheel consumers.
[[tool.mypy.overrides]]
module = ["textual.*", "qigkernels.*", "qig_coordizer.*", "qig_warp.*", "qig_applied.*", "qig_consciousness.*"]
ignore_missing_imports = true

[tool.uv.sources]
# All co-developed QIG siblings editable-from-submodule: latest HEAD, local fixes live immediately, and
# uv-sync can NEVER revert them to published wheels (the fragility that blocked running). qig-core carries
# the velocity-gate Pillar-3 fix (tagged v2.12.3 → republished to PyPI via qig-core release.yml for any
# non-editable consumer). qig-compute / qig-warp stay published wheels (no local edits, PyPI-install rule).
qig-core = { workspace = true }
qigkernels = { workspace = true }
qig-coordizer = { workspace = true }
qig-geocoding = { workspace = true }
